Mise en place de l'authentification par token

--- a/angular/src/app/index/home/home.component.html
+++ b/angular/src/app/index/home/home.component.html
@@ -1,1 +1,3 @@
-Home page
+<h1 class="text-5xl text-center my-5">Home page test</h1>
+
+<img src="assets/img/nuit-de-l-info.jpg" class="w-20 mx-auto rounded-full" />
