--- a/angular/src/app/about/about.component.html
+++ b/angular/src/app/about/about.component.html
@@ -1,47 +1,41 @@
     <div class="flex items-center justify-center h-screen bg-gradient-to-r from-indigo-500 to-sky-500">
-        <div class="flex justify-center space-x-6 bg-gray-700 p-6 rounded-lg bg-gradient-to-r from-gray-800 via-slate-700 to-gray-600">
+        <div class="w-1/2 flex justify-center space-x-6 p-6 rounded-lg bg-gradient-to-r from-blackbean to-blackbean">
             <div class="flex flex-col items-center">
                 <div class="text font-light text-2xl mb-4 text-white">Classement</div>
-                <table class="w-1/2 text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-                        <tr>
-                            <th scope="col" class="px-6 py-3">
-                                Product name
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Color
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-                            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                Apple MacBook Pro 17"
-                            </th>
-                            <td class="px-6 py-4">
-                                Silver
-                            </td>
-                        </tr>
-                        <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-                            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                Microsoft Surface Pro
-                            </th>
-                            <td class="px-6 py-4">
-                                White
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="classement">
+                    <table class="w-full md:w-3/4 lg:w-1/2 text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                            <tr>
+                                <th scope="col" class="px-6 py-3">
+                                    User
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Score
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let user of users" class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+                                <td class="px-6 py-4">
+                                    {{ user.id }}
+                                </td>
+                                <td class="px-6 py-4">
+                                    {{ user.username }}
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div class="w-1/2">
-                <div class="button flex items-center justify-center my-3 rounded-lg text-center bg-gradient-to-r from-emerald-500 via-emerald-400 to-green-500 p-5">
+            <div class="w-1/2 my-auto">
+                <div class="button flex items-center justify-center my-3 rounded-lg text-center bg-gradient-to-r from-green-500 via-emerald2 to-green-500 p-5">
                     <p class="text-lg font-semibold mr-2">Start !</p>
                     <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 16">
                         <path stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m2.707 14.293 5.586-5.586a1 1 0 0 0 0-1.414L2.707 1.707A1 1 0 0 0 1 2.414v11.172a1 1 0 0 0 1.707.707Z"></path>
                     </svg>
                 </div>
 
-                <div class="button flex items-center mb-4 rounded-lg text-center bg-gradient-to-r from-amber-500 via-amber-400 to-yellow-300 p-5">
+                <div class="button flex items-center justify-center mb-4 rounded-lg text-center bg-gradient-to-r from-xanthous via-amber-300 to-xanthous p-5">
                     <p class="text-lg font-semibold mr-2">Révisions</p>
                     <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                         <path fill="black" d="M8 1V0v1Zm4 0V0v1Zm2 4v1h1V5h-1ZM6 5H5v1h1V5Zm2-3h4V0H8v2Zm4 0a1 1 0 0 1 .707.293L14.121.879A3 3 0 0 0 12 0v2Zm.707.293A1 1 0 0 1 13 3h2a3 3 0 0 0-.879-2.121l-1.414 1.414ZM13 3v2h2V3h-2Zm1 1H6v2h8V4ZM7 5V3H5v2h2Zm0-2a1 1 0 0 1 .293-.707L5.879.879A3 3 0 0 0 5 3h2Zm.293-.707A1 1 0 0 1 8 2V0a3 3 0 0 0-2.121.879l1.414 1.414ZM2 6h16V4H2v2Zm16 0h2a2 2 0 0 0-2-2v2Zm0 0v12h2V6h-2Zm0 12v2a2 2 0 0 0 2-2h-2Zm0 0H2v2h16v-2ZM2 18H0a2 2 0 0 0 2 2v-2Zm0 0V6H0v12h2ZM2 6V4a2 2 0 0 0-2 2h2Zm16.293 3.293C16.557 11.029 13.366 12 10 12c-3.366 0-6.557-.97-8.293-2.707L.293 10.707C2.557 12.971 6.366 14 10 14c3.634 0 7.444-1.03 9.707-3.293l-1.414-1.414ZM10 9v2a2 2 0 0 0 2-2h-2Zm0 0H8a2 2 0 0 0 2 2V9Zm0 0V7a2 2 0 0 0-2 2h2Zm0 0h2a2 2 0 0 0-2-2v2Z"></path>
