--- a/angular/src/app/index/login/login.component.html
+++ b/angular/src/app/index/login/login.component.html
@@ -39,6 +39,10 @@
           </svg>
           Se connecter
         </button>
+        <button [disabled]="busyLogin" type="submit" routerLink="/register"
+        class="inline-flex items-center px-4 py-2 ml-5 font-semibold leading-6 text-sm shadow rounded-md text-white bg-indigo-500 hover:bg-indigo-400 transition ease-in-out duration-150">
+        S'inscrire
+        </button>
       </div>
     </form>
   </div>
