--- a/angular/src/app/register/register.component.html
+++ b/angular/src/app/register/register.component.html
@@ -1,15 +1,15 @@
-<div class="flex h-screen">
-    <div class="m-auto rounded shadow-md p-3 sm:mx-auto sm:w-full sm:max-w-sm">
+<div class="background flex h-screen bg-zinc-50">
+    <div class="m-auto rounded shadow-md p-3 bg-white sm:mx-auto sm:w-full sm:max-w-sm">
       <form class="space-y-6" #f="ngForm" (ngSubmit)="onSubmit(f)">
         <div>
-            <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
+            <label for="name" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
             <div class="mt-2">
-              <input id="username" name="username" type="username" autocomplete="username" [(ngModel)]="username" #emailInput="ngModel"
+              <input id="name" name="name" type="name" autocomplete="name" [(ngModel)]="name" #emailInput="ngModel"
                 required
-                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-3" />
               <small *ngIf="f.submitted && emailInput.errors?.['required']" class="text-red-600 font-bold">Veuillez
                 renseigner votre
-                Username.</small>
+                username.</small>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
           <div class="mt-2">
             <input id="password" name="password" type="password" autocomplete="current-password" [(ngModel)]="password"
               required
-              class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+              class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-3" />
           </div>
         </div>
 
@@ -41,11 +41,11 @@
               <label for="password_confirmation" class="block text-sm font-medium leading-6 text-gray-900">Confirmation mot de passe</label>
             </div>
             <div class="mt-2">
-              <input id="password_confirmation" name="password_confirmation" type="password_confirmation" autocomplete="password_confirmation" [(ngModel)]="password_confirmation"
+              <input id="password_confirmation" name="password_confirmation" type="password" autocomplete="password_confirmation" [(ngModel)]="password_confirmation"
                 required
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
             </div>
-          </div>
+        </div>
   
         <div class="flex justify-center">
           <button [disabled]="busyRegister" type="submit"
