--- a/angular/src/app/index/review/review.component.html
+++ b/angular/src/app/index/review/review.component.html
@@ -1,19 +1,24 @@
-<div id="accordion-collapse" data-accordion="collapse" class="p-2">
-    <h2 id="accordion-collapse-heading-1">
-      <button type="button" class="flex items-center justify-between w-full shadow-lg p-5 font-medium rtl:text-right  text-gray-500 border border-b-0 border-gray-200 rounded-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
-        <span>“Pas la peine de s’adapter, on arrive suffisamment à atténuer le changement climatique…”</span>
-        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
-        </svg>
-      </button>
-    </h2>
-    <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-      <div class="p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
-        <p class="mb-2 text-gray-500 dark:text-gray-400">La bonne réponse est : </p>
-        <p class="mb-2 text-gray-500 dark:text-gray-400">Quoique l’on fasse, le changement climatique est déjà enclenché : on en voit bien les effets visibles en France et dans le monde : sécheresses, canicules, inondations... Les politiques volontaristes peuvent contenir ces effets mais pas les gommer à court terme.</p>
-        <p class="text-gray-500 dark:text-gray-400"><a href="lien vers la source" class="text-blue-600 dark:text-blue-500 hover:underline">En savoir plus</a></p>
-      </div>
-    </div>
+<button id="monBtn" class="flex items-center justify-between bg-emerald2 shadow-lg p-5 font-medium rtl:text-right  text-gray-500 border border-b-0 border-gray-200 rounded-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray dark:hover:bg-gray-800">
+  <img src="assets/img/maison.png" alt="icone" class="flex w-10 h-10" />
+</button>
+
+<div class="grid grid-cols-4 gap-4">
+<div *ngFor="let question of questions" class="max-w-sm p-6 m-6 border-8 border-custombeige rounded-lg shadow-lg">
+  <h5 class="mb-2 text-2xl font-bold tracking-tight text-blackbean dark:text-white">{{question.intitule}}</h5>
+  <p *ngIf="question.bonne_reponse == '1'" class="mb-3 text-xl font-bold text-emerald2 dark:text-gray-400">La Réponse est : {{ question.reponse_1 }}</p>
+  <p *ngIf="question.bonne_reponse == '2'" class="mb-3 text-xl font-bold text-emerald2 dark:text-gray-400">La Réponse est : {{ question.reponse_2 }}</p>
+  <p *ngIf="question.bonne_reponse == '3'" class="mb-3 text-xl font-bold text-emerald2 dark:text-gray-400">La Réponse est : {{ question.reponse_3 }}</p>
+  <p *ngIf="question.bonne_reponse == '4'" class="mb-3 text-xl font-bold text-emerald2 dark:text-gray-400">La Réponse est : {{ question.reponse_4 }}</p>
+
+  <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{question.description}}</p>
+  <a attr.href="{{question.source}}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-xanthous rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+      En savoir plus
+      <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+      </svg>
+  </a>
 </div>
+</div>
+
   
   
