--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "opendyslexicregular";
+  src: url("assets/fonts/opendyslexic-regular-webfont.woff2") format("woff2"),
+    url("assets/fonts/opendyslexic-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.dyslexicFont {
+  font-family: "opendyslexicregular";
+}
+
 .background {
     position: relative;
     background-repeat: space;
