--- a/angular/src/app/index/quizz/quizz.component.html
+++ b/angular/src/app/index/quizz/quizz.component.html
@@ -45,7 +45,7 @@
                         d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
             </button>
-            <button routerLink="/about" class="absolute bottom-8 right-8 bg-transparent hover:bg-blue-500 rounded"
+            <button routerLink="/bravo" class="absolute bottom-8 right-8 bg-transparent hover:bg-blue-500 rounded"
                 *ngIf="!answer.next_question">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="absolute bottom-0 right-0 w-20 h-20">
