--- a/angular/src/app/index/bravo/bravo.component.html
+++ b/angular/src/app/index/bravo/bravo.component.html
@@ -1,4 +1,4 @@
-<div id="main" class="flex flex-col items-center justify-center bg-gray-600">
+<div id="main" class="background flex-col items-center justify-center bg-gray-600">
     <p class="text-6xl my-8 text-xanthous font-bold">Bravo ! </p>
     <div class="max-w-sm rounded-lg overflow-hidden shadow-lg mt-3 mb-8 px-6 pt-3 bg-gray-800">
         <p class="text-xanthous">score</p>
