--- a/angular/src/app/admin/admin.component.html
+++ b/angular/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="background border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <div></div>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
