--- a/angular/src/app/index/login/login.component.html
+++ b/angular/src/app/index/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen">
+<div class="background flex h-screen">
   <div class="m-auto rounded shadow-md p-3 sm:mx-auto sm:w-full sm:max-w-sm">
     <form class="space-y-6" #f="ngForm" (ngSubmit)="onSubmit(f)">
       <div>
