--- a/angular/src/app/index/quizz/quizz.component.html
+++ b/angular/src/app/index/quizz/quizz.component.html
@@ -2,7 +2,7 @@
     'bg-green-400': correct === true,
     'bg-red-400': correct === false,
     'bg-white': correct === null
-  }">
+  }" class="background">
     <div id="question" class=" flex items-center justify-center h-screen bg-zinc-50" *ngIf="!displayAnswer" >
         <div class="absolute top-5 right-5 m-4 text-2xl font-light text-gray-900">
             Score : <span class="font-bold text-4xl">{{ answer?.score !== null && answer?.score !== undefined ? answer?.score : 0 }}</span>
