--- a/angular/src/app/index/review/review.component.html
+++ b/angular/src/app/index/review/review.component.html
@@ -1,6 +1,6 @@
-<div class="background">
-  <div id="accordion-collapse" data-accordion="collapse" class="p-2">
-      <h2 id="accordion-collapse-heading-1">
+<div class="background w-screen h-screen">
+  <div id="accordion-collapse" data-accordion="collapse" class="p-2 ">
+      <h2 id="accordion-collapse-heading-1" class="bg-white">
         <button type="button" class="flex items-center justify-between w-full shadow-lg p-5 font-medium rtl:text-right  text-gray-500 border border-b-0 border-gray-200 rounded-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
           <span>“Pas la peine de s’adapter, on arrive suffisamment à atténuer le changement climatique…”</span>
           <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -8,7 +8,7 @@
           </svg>
         </button>
       </h2>
-      <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
+      <div id="accordion-collapse-body-1" class="hidden bg-white" aria-labelledby="accordion-collapse-heading-1">
         <div class="p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
           <p class="mb-2 text-gray-500 dark:text-gray-400">La bonne réponse est : </p>
           <p class="mb-2 text-gray-500 dark:text-gray-400">Quoique l’on fasse, le changement climatique est déjà enclenché : on en voit bien les effets visibles en France et dans le monde : sécheresses, canicules, inondations... Les politiques volontaristes peuvent contenir ces effets mais pas les gommer à court terme.</p>
