--- a/angular/src/app/index/bravo/bravo.component.html
+++ b/angular/src/app/index/bravo/bravo.component.html
@@ -1,8 +1,8 @@
 <div id="main" class="background flex flex-col h-screen items-center justify-center">
     <p class="text-6xl my-8 text-gray-800 font-bold">Bravo ! </p>
     <div class="max-w-sm rounded-lg overflow-hidden shadow-lg mt-3 mb-8 px-6 pt-3 bg-gray-800">
-        <p class="text-xanthous">Score</p>
-        <p class="text-8xl oldstyle-nums text-xanthous mb-10">1500</p>
+        <p class="text-sapin">Score</p>
+        <p class="text-8xl oldstyle-nums text-sapin mb-10">1500</p>
     </div>
     <table class=" rtl:text-right dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-800 dark:text-gray-400">
