Added dynamic score display + minor css fixes

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="text-center">
+<div class="absolute left-5 bottom-5 text-center z-50">
     <button
-        class="absolute left-0 bottom-0 p-5 text-white bg-blue-300 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm  dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+        class=" p-5 text-white bg-blue-300 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm  dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
         type="button" data-drawer-target="drawer-right-example" data-drawer-show="drawer-right-example"
         data-drawer-placement="right" aria-controls="drawer-right-example" data-drawer-hide="drawer-right-example">
         <img src="assets/img/accessibility.png" class="w-10 h-auto" />
