--- a/angular/src/app/accessibilite-tools/accessibilite-tools.component.html
+++ b/angular/src/app/accessibilite-tools/accessibilite-tools.component.html
@@ -7,10 +7,10 @@
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
         </svg>
-        <span class="sr-only">Close menu</span>
+        <span class="sr-only">Fermer le menu</span>
     </button>
     <div>
-        <h3 class="text-3xl my-5">Outils d'accéssibilité</h3>
+        <h3 class="text-3xl my-5">Outils d'accessibilité</h3>
         <ul>
             <li>
                 <label class="relative inline-flex items-center cursor-pointer">
@@ -19,7 +19,7 @@
                     <div
                         class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600">
                     </div>
-                    <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Dislexique</span>
+                    <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Dyslexique</span>
                 </label>
             </li>
         </ul>
