--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -20,3 +20,5 @@
     background-image: url('../src/assets/img/sapin-de-noel.png');
     background-size: 60px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
