--- a/angular/src/app/index/quizz/quizz.component.html
+++ b/angular/src/app/index/quizz/quizz.component.html
@@ -10,7 +10,7 @@
                 answer?.score : 0 }}</span>
         </div>
 
-        <div class="text-center px-20 block h-2/3 w-3/4 bg-white border border-gray-200 rounded-lg shadow ">
+        <div class="text-center px-20 py-5 block h-2/3 w-3/4 bg-white border border-gray-200 rounded-lg shadow ">
             <h1 class="flex justify-center mb-16 mt-8 text-3xl font-bold tracking-tight text-gray-900">
                 {{question?.intitule}}</h1>
             <div class="grid grid-cols-2 gap-10">
@@ -22,7 +22,6 @@
                     </button>
                 </div>
             </div>
-
         </div>
     </div>
 
