--- a/angular/src/app/index/review/review.component.html
+++ b/angular/src/app/index/review/review.component.html
@@ -14,7 +14,7 @@
       <p *ngIf="question.bonne_reponse == '4'" class="mb-3 text-xl font-bold text-sapin dark:text-gray-400">La Réponse est : {{ question.reponse_4 }}</p>
 
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{question.description}}</p>
-      <a attr.href="{{question.source}}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-sapin rounded-lg hover:bg-sapinfonce focus:ring-4 focus:outline-none focus:ring-sapin ">
+      <a attr.href="{{question.source}}" target="_blank" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-sapin rounded-lg hover:bg-sapinfonce focus:ring-4 focus:outline-none focus:ring-sapin ">
           En savoir plus
           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
